cmake_minimum_required(VERSION 3.19)
project(jvm_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(jvm_cpp main.cpp src/com/ff/jvm/hotspot/share/vm/Klass.cpp include/Klass.h src/com/ff/jvm/hotspot/share/vm/ClassLoader.cpp include/ClassLoader.h include/common.h src/com/ff/jvm/hotspot/share/vm/Reader.cpp include/Reader.h src/com/ff/jvm/hotspot/share/vm/MethodInfo.cpp include/MethodInfo.h src/com/ff/jvm/hotspot/share/vm/utils/ByteUtils.cpp include/ByteUtils.h src/com/ff/jvm/hotspot/share/vm/ConstantPool.cpp include/ConstantPool.h src/com/ff/jvm/hotspot/share/vm/AttributeInfo.cpp include/AttributeInfo.h src/com/ff/jvm/hotspot/share/vm/Interface.cpp include/Interface.h src/com/ff/jvm/hotspot/share/vm/FieldInfo.cpp include/FieldInfo.h src/com/ff/jvm/hotspot/share/vm/Method.cpp include/Method.h src/com/ff/jvm/hotspot/share/vm/Attributes.cpp include/Attributes.h src/com/ff/jvm/hotspot/share/vm/LineNumberTableAttr.cpp include/LineNumberTableAttr.h src/com/ff/jvm/hotspot/share/vm/LineNumberTable.cpp include/LineNumberTable.h)